--- a/frontend/myWeb.html
+++ b/frontend/myWeb.html
@@ -13,19 +13,19 @@
        height: 70px;
     }
     #navItem1 {
-      color: #323f4b;
+      color: white;
       font-family: "Roboto";
     }
     #navItem2 {
-      color: #323f4b;
+      color: white;
       font-family: "Roboto";
     }
     #navItem3 {
-      color: #323f4b;
+      color: white;
       font-family: "Roboto";
     }
     #navItem4 {
-      color: #323f4b;
+      color: white;
       font-family: "Roboto";
     }
     .banner-section-bg-container {
@@ -238,11 +238,11 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img
-            src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-munch-img.png"
+            src="https://api-ninjas.com/images/developer.png"
             class="food-munch-logo"
           />
         </a>
